--- a/index.css
+++ b/index.css
@@ -1,14 +1,14 @@
 body {
-    background-color: black;
+    background-color:black ;
   
 }
 
 .lucky {
-    color: white;
+    color: rgb(1, 1, 1);
     display: flex;
     justify-content: center;
     align-items: center;
-   height: 100vh; 
+    height: 10vh; 
    
 }
 
@@ -46,5 +46,25 @@ body {
     width: 100%;
   }
 
+  #card-container {
+    display: flex;
+    justify-content: space-around;
+    padding-left: 15%;
+    padding-right: 15%;
+  }
+
+.card {
+  background-color: #efefef;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+  img {
+    margin: 12.5%;
+    width: 75%;
+    height: auto;
+  }
 
 
