--- a/deals-page/deals.css
+++ b/deals-page/deals.css
@@ -6,6 +6,7 @@ body {
 h1{
     font-size: 5em;
 }
+
 h2 {
     color: white;
     font-family: 'Courier New', Courier, monospace;
@@ -56,11 +57,17 @@ hr {
     margin-top: 5%;
 }
 
+/* removes underline from link */
 a {
     text-decoration: none;
     color: white;
 }
-
+/* allows image to shrink with page */
+img {
+    width: 100%;
+    height: auto;
+}
+/* psuedo class changes css when user hovers over element */
 a:hover {
     font-size: larger;
 }
