--- a/home-page/index.css
+++ b/home-page/index.css
@@ -1,11 +1,12 @@
 body {
-  background-color: black ;
+  background-color: #212529 ;
   
 }
 
 .navbar {
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 
@@ -56,14 +57,14 @@ body {
 
 .card {
   
-    color: #efefef;
-    background-color: #212529;
+    background-color: #f3f1f1;
+    color: #212529;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 10%;
     padding-bottom: 10%;
-    
+    box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
   }
 
 #mealLink {
@@ -80,7 +81,7 @@ body {
   padding-left: 15%;
   padding-right: 15%;
   visibility: hidden;
- 
+  
   }
 
 
@@ -127,6 +128,7 @@ body {
 #button {
   color: #ffffff;
   background-color: rgb(180, 22, 22);
+  box-shadow: 5px 5px 10px 2px rgba(0,0,0,.8);
   margin: 40px;
   border-radius: 12%;
 }
