--- a/about-us/about-us.css
+++ b/about-us/about-us.css
@@ -1,12 +1,29 @@
 body {
     background-color: whitesmoke;
     font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+  
 }
 
 html {
     box-sizing: border-box;
 }
+
+
+
+.navbar {
+
+    background-color: #212529;
+    color: white;
+}
+
+#pageLink {
+ margin-left: 25px;
+}
+
+#pageLink:hover {
+    font-size: larger;
+}
+
 
 .row { margin: 0 -5px;}
 
@@ -40,14 +57,12 @@ a:hover {
 
 }
 
-.columns {
-    float: left;
-    width: 33.3%;
-    padding: 0 10px;
+.content {
+  display:flex
 }
 
 
-.card {
+.info-container {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.817);
     margin: 8px;
     padding: 16px;
