--- a/home-page/index.css
+++ b/home-page/index.css
@@ -236,3 +236,17 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+@media only screen and (max-width: 500px) {
+  #card-container {
+    display: flex;
+    flex-direction: column;
+  }
+  #card2 {
+    margin-top: 5%;
+  }
+
+  #card1, #card2 {
+    width: 100%;
+  }
+}
